--- a/web/src/main/resources/templates/user/common/cart.html
+++ b/web/src/main/resources/templates/user/common/cart.html
@@ -91,6 +91,9 @@
 								</tr>
 							</tbody>
 						</table>
+						<div class="tip-box">
+							<span>购物车中还没有商品，赶紧选购吧!</span>
+						</div>
 						<div class="cart-foot">
 							<div class="clearfix">
 								<span class="choose"><input type="checkbox" id="checkAll"/>全选</span>								
