--- a/web/src/main/resources/templates/index.html
+++ b/web/src/main/resources/templates/index.html
@@ -202,7 +202,7 @@
 			</div>
 			<div class="topic">
 				<div class="hd">
-					<span>专题</span>
+					<span>解决方案</span>
 				</div>
 				<div class="global-box topic-box">
 					<ul>
@@ -212,7 +212,7 @@
 								生物芯片扫描仪
 							</div>
 							<div class="spe-pic">
-								<img alt="" th:src="@{${subject.image}}" width="230" height="130" />
+								<img alt="" th:src="@{${subject.image}}" width="210" height="170" />
 							</div> <div class="topic-detail" th:text="${subject.summary}"></div> </a>
 						</li>
 					</ul>
