--- a/web/src/main/resources/templates/subject/subject.html
+++ b/web/src/main/resources/templates/subject/subject.html
@@ -64,7 +64,7 @@
 		<div class="crumb news-crumb nobodr">
 			<a>首页</a>
 			<i>></i>
-			<a>专题</a>
+			<a>解决方案</a>
 			<i>></i>
 			<a th:text="${subject.name}">Lorem ipsum dolor sit amet</a>
 		</div>	
