--- a/web/src/main/resources/templates/user/common/detail.html
+++ b/web/src/main/resources/templates/user/common/detail.html
@@ -33,8 +33,8 @@
 			</div>
 			<div class="mainwrapper clearfix">
 				<div class="aside fl">
-					<a class="active">个人资料</a> <a href="/user/collection">收藏夹</a> <a
-						href="/user/cart">购物车</a> <a href="/user/buyRecords">采购申请</a>
+					<a class="active">个人资料</a> <a href="/user/collection">收藏夹</a> 
+					<a href="/user/carts">购物车</a> <a href="/user/buyRecords">采购申请</a>
 				</div>
 				<div class="mainpanel fr">
 					<div class="tabs-nav info-tabs bodr">
