--- a/web/src/main/resources/templates/user/forgetPw.html
+++ b/web/src/main/resources/templates/user/forgetPw.html
@@ -24,6 +24,8 @@
 	<div class="resg-header">		
 		<div class="head-nav">
 			<div class="nav-box">
+				<a href="/">首页</a>
+				<i>|</i>
 				<a href="/productCategory/仪器">仪器</a>
 				<i>|</i>
 				<a href="/productCategory/试剂">试剂</a>
@@ -32,7 +34,7 @@
 				<i>|</i>
 				<a href="/productCategory/服务">服务</a>
 				<i>|</i>
-				<a href="/subjects">专题</a>
+				<a href="/subjects">解决方案</a>
 			</div>
 		</div>
 		<div class="head-box clearfix">
