--- a/web/src/main/resources/templates/user/provider/signup.html
+++ b/web/src/main/resources/templates/user/provider/signup.html
@@ -117,7 +117,7 @@
 				<i>|</i>
 				<a href="/productCategory/4">服务</a>
 				<i>|</i>
-				<a href="/subjects">专题</a>
+				<a href="/subjects">解决方案</a>
 			</div>
         </div>
         <div class="head-box clearfix">
