admin provider bug fix

--- a/admin/src/main/resources/templates/advertisement/advertisement.html
+++ b/admin/src/main/resources/templates/advertisement/advertisement.html
@@ -46,7 +46,7 @@
             冻结/解冻
         </div>
         <div class="modal-body">
-        	{{item.name}}
+        	{{item.state|reverseActiveFilter}}
         </div>
         <div class="modal-footer">
             <button class="btn btn-primary" ng-click="ok()">OK</button>
