--- a/admin/src/main/resources/templates/brand/brand.html
+++ b/admin/src/main/resources/templates/brand/brand.html
@@ -41,7 +41,7 @@
             冻结/解冻
         </div>
         <div class="modal-body">
-        	{{item.name}}
+        	是否{{item.state|reverseActiveFilter}}{{item.title}}
         </div>
         <div class="modal-footer">
             <button class="btn btn-primary" ng-click="ok()">OK</button>
