--- a/admin/src/main/resources/templates/subject/edit.html
+++ b/admin/src/main/resources/templates/subject/edit.html
@@ -24,7 +24,7 @@
                 <div class="col-sm-2">
                     <img ng-src="{{item.cover}}" width="100" height="100" />
                 </div>
-                <div class="col-sm-6">
+                <div class="col-sm-6 files_tab">
                     <button id="uploadImg" class="btn btn-success btn-xs">
                         <input type="file" file-upload="upload" />
                         <a href="#">选择文件</a>
