--- a/admin/src/main/resources/templates/subject/subjects.html
+++ b/admin/src/main/resources/templates/subject/subjects.html
@@ -18,7 +18,7 @@
 		</thead>
 		<tbody>
 			<tr ng-repeat="item in items" ng-click="view(item)">
-				<td><a href="#/subjectDetail/{{item.id}}">{{$index+1}}</a></td>
+				<td>{{$index+1}}</td>
 				<td>{{item.name}}</td>
 				<td><img ng-src="{{item.cover}}" width="100" height="100"></img></td>
 				<td>{{item.active|activeFilter}}</td>
@@ -26,7 +26,9 @@
 				<td>
 				<button type="button" class="btn btn-primary btn-sm" ng-click="updateState(item)">
 					{{item.active|reverseActiveFilter}}
-				</button></td>
+				</button>
+				<a class="btn btn-primary btn-sm" href="#/subjectDetail/{{item.id}}">修改</a>
+				</td>
 			</tr>
 		</tbody>
 	</table>
@@ -38,7 +40,7 @@
 			冻结/解冻
 		</div>
 		<div class="modal-body">
-			{{item.name}}
+        	{{item.state|reverseActiveFilter}}{{item.name}}
 		</div>
 		<div class="modal-footer">
 			<button class="btn btn-primary" ng-click="ok()">OK</button>
