--- a/admin/src/main/resources/templates/user/providerDetail.html
+++ b/admin/src/main/resources/templates/user/providerDetail.html
@@ -104,7 +104,7 @@
                             <label class="control-label col-sm-4"> <span class="text-danger">*</span>企业性质： </label>
                             <div class="col-sm-8">
                                 <select disabled="true">
-                                    <option>{{item.type}}</option>
+                                    <option>{{item.companyType}}</option>
                                 </select>
                             </div>
                         </div>
@@ -148,25 +148,25 @@
                     <div class="form-group">
                         <label class="control-label col-sm-2"> <span class="text-danger">*</span>企业简介： </label>
                         <div class="col-sm-8">
-                            <textarea rows="4" class="w400" disabled="true" ng-value="item.content"></textarea>
+                            <textarea rows="4" class="w400" disabled="true" >{{item.content}}</textarea>
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="control-label col-sm-2"> <span class="text-danger">*</span>企业营业执照上传： </label>
                         <div class="col-sm-8">
-                            <img src="{{businessLicenseUrl}}" width="400" height="100" />
+                            <img ng-src="{{businessLicenseUrl}}" width="400" height="100" />
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="control-label col-sm-2"> <span class="text-danger">*</span>税务登记证上传： </label>
                         <div class="col-sm-8">
-                            <img src="{{taxRegistrationUrl}}" width="400" height="100" />
+                            <img ng-src="{{taxRegistrationUrl}}" width="400" height="100" />
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="control-label col-sm-2"> <span class="text-danger">*</span>组织结构代码证上传: </label>
                         <div class="col-sm-8">
-                            <img src="{{structureCodeUrl}}" width="400" height="100" />
+                            <img ng-src="{{structureCodeUrl}}" width="400" height="100" />
                         </div>
                     </div>
                 </div>
