--- a/web/src/main/resources/templates/user/provider/changePassword.html
+++ b/web/src/main/resources/templates/user/provider/changePassword.html
@@ -35,7 +35,7 @@
 				</div>
 				<div class="mainpanel fr">
 					<div class="tabs-nav info-tabs bodr">
-						<a href="/provider/detail">基本资料</a> <a class="active">修改密码</a>
+						<a href="/supplier/detail">基本资料</a> <a class="active">修改密码</a>
 					</div>
 					<div class="tab-conts tab-con">
 
