--- a/web/src/main/resources/static/css/global.css
+++ b/web/src/main/resources/static/css/global.css
@@ -1208,7 +1208,7 @@ a.minus:hover, a.plus:hover {
 	margin-right: 20px;
 }
 .pagination {
-    margin: 0 0 50px;
+    margin: 20px 0 50px;
     overflow: hidden;
 }
 .pagination .l-pagination{
@@ -1818,6 +1818,10 @@ button.default{
 }
 .push-good .form-group i.error{
     margin-left: 165px;
+}
+.push-good .form-group i.error.error-abs{
+	top:40%;
+	left:25%;
 }
 .update-pro{
 	width: 750px;
