--- a/web/src/main/resources/templates/user/provider/release.html
+++ b/web/src/main/resources/templates/user/provider/release.html
@@ -212,7 +212,7 @@
 							<span id="uploadImg">
 								<input type='file' name='file' th:attr="data-url=@{/provider/productImage}" /> <a href="#">选择文件</a>
 							</span>
-							<i class="error" th:if="${#fields.hasErrors('coverImg')}" th:errors="*{coverImg}"></i>
+							<i class="error error-abs" th:if="${#fields.hasErrors('coverImg')}" th:errors="*{coverImg}"></i>
 						</div>
 						<div class="form-group clearfix" style="height: 400px;">
 							<label class="fl">产品介绍</label>
