--- a/web/src/main/resources/templates/user/login.html
+++ b/web/src/main/resources/templates/user/login.html
@@ -39,7 +39,7 @@
 		</div>
 		<div class="head-box clearfix">
 			<a href="/" class="logo"><img th:src="@{/img/logo.png}" alt="logo" width="165" height="30"/></a>
-			<div class="head-menu-btn resg-company regs">
+			<div class="head-menu-btn fr login-resg">
 				<a href="/signup?user" class="self-btn"></a>
 				<a href="/signup?provider" class="company-btn"></a>
 			</div>
