--- a/web/src/main/resources/static/css/global.css
+++ b/web/src/main/resources/static/css/global.css
@@ -678,6 +678,18 @@ img{
 	width:80px;
 	background: url('../img/icon-resg2.png') no-repeat;
 }
+.resg-header .login-resg{
+	float:right;
+}
+.login-resg a{
+	display: inline-block;
+	width:80px;
+	background: url('../img/icon-login-resg.png') no-repeat;
+}
+.resg-header .login-resg a.company-btn{
+	background-position: -76px 0;
+	width:87px;
+}
 .resg-header .resg-self a.company-btn{
 	background-position: -80px 0;
 	width:87px;
