--- a/web/src/main/resources/static/css/global.css
+++ b/web/src/main/resources/static/css/global.css
@@ -1888,3 +1888,9 @@ input[type=radio]:checked + label{
 	white-space: nowrap;
 	course:hand;
 }
+.userHide{
+	display: none;
+}
+.userShow{
+	display: block;
+}
