--- a/admin/src/main/resources/templates/category/childCategory.html
+++ b/admin/src/main/resources/templates/category/childCategory.html
@@ -38,5 +38,8 @@
 				</tr>
 			</tbody>
 		</table>
+		<alert ng-repeat="alert in alerts" type="{{alert.type}}" dismiss-on-timeout="1000" close="closeAlert($index)">
+		{{alert.msg}}
+		</alert>
 	</div>
 </div>
