--- a/web/src/main/resources/templates/product/product.html
+++ b/web/src/main/resources/templates/product/product.html
@@ -186,7 +186,7 @@
 				<div class="tab-panel global-box topic-box hide">
 					<ul class="ml-20">
 						<li th:each="subject:${subjects}">
-						<a th:href="'/subjects/'+${subject.id}">
+						<a th:href="'/subjects/'+${subject.id}" target="_blank">
 								<div class="title">
 									<b class="ft16 text210" th:text="${subject.name}">生物芯片扫描仪</b>
 								</div>
