--- a/web/src/main/resources/templates/head/head.html
+++ b/web/src/main/resources/templates/head/head.html
@@ -12,7 +12,7 @@
 					<a data-name="/products/_search" data-input="title">商品</a>
 					<a data-name="/products/_search" data-input="model">型号</a>
 					<a data-name="/products/_search" data-input="brand">品牌</a>
-					<a data-name="/subject/_search" data-input="title">解决方案</a>
+					<a data-name="/subject/_search" data-input="title">方案</a>
 					<a data-name="/info/_search" data-input="title">资讯</a>
 				</div>
 			</form>
