--- a/web/src/main/resources/templates/head/headCart.html
+++ b/web/src/main/resources/templates/head/headCart.html
@@ -1,6 +1,7 @@
 <div th:fragment="head" class="header" >
 	<div class="head-box clearfix">
 		<script type="text/javascript" th:src="@{/js/noCart.js}"></script>
+		<script src="/js/searchForm.js"></script>
 		<a href="/" class="logo"><img th:src="@{/img/logo.png}" alt="logo" width="165" height="30"/></a>
 		<div class="head-search">
 			<form id="searchForm" action="/products/_search">
@@ -11,7 +12,7 @@
 					<a data-name="/products/_search" data-input="title">商品</a>
 					<a data-name="/products/_search" data-input="model">型号</a>
 					<a data-name="/products/_search" data-input="brand">品牌</a>
-					<a data-name="/subject/_search" data-input="title">解决方案</a>
+					<a data-name="/subject/_search" data-input="title">方案</a>
 					<a data-name="/info/_search" data-input="title">资讯</a>
 				</div>
 			</form>
