--- a/web/src/main/resources/static/css/global.css
+++ b/web/src/main/resources/static/css/global.css
@@ -351,7 +351,7 @@ img{
 	margin-left: 30px;
 }
 .head-user .user-name{
-	width: 60px;
+	padding:0 15px;
 	text-align: center;
 	line-height: 28px;
 	color: #fff;
