添加不可修改input样式

--- a/web/src/main/resources/templates/user/provider/detail.html
+++ b/web/src/main/resources/templates/user/provider/detail.html
@@ -72,11 +72,13 @@
 										<div class="form-group">
 											<label><i>*</i>企业名称（中文）</label>
 											<input type="text" th:field="*{companyNameChina}" readonly="readonly"/>	
+											<div class="readonly"></div>
 										</div>
 										<div class="form-group">
 											<div class="fl">
 											<label>企业名称（英文）</label>
-											<input type="text" th:field="*{companyNameEnglish}" readonly="readonly"/>									
+											<input type="text" th:field="*{companyNameEnglish}" readonly="readonly"/>	
+											<div class="readonly"></div>								
 											</div>
 										</div>
 										<div class="form-group">
@@ -195,18 +197,21 @@
 											<div class="fl">
 											<label><i>*</i>注册邮箱</label>
 											<input type="text" th:field="*{email}" readonly="readonly"/>
+											<div class="readonly"></div>
 											</div>
 										</div>
 										<div class="form-group">
 											<div class="fl">
 											<label><i>*</i>注册用户名</label>
 											<input type="text" th:field="*{name}" readonly="readonly"/>
+											<div class="readonly"></div>
 											</div>
 										</div>
 										<div class="form-group">
 											<div class="fl">
 											<label><i>*</i>手机号</label>
 											<input type="text" th:field="*{phone}" readonly="readonly"/>	
+											<div class="readonly"></div>
 											</div>
 										</div>
 										<div class="form-group">
