--- a/web/src/main/resources/static/css/global.css
+++ b/web/src/main/resources/static/css/global.css
@@ -1761,6 +1761,7 @@ button.default{
 	vertical-align: middle;
 }
 .basic-info .form-group{
+	position:relative;
 	overflow: hidden;
 }
 .basic-info .form-group i.error{
@@ -1899,4 +1900,14 @@ input[type=radio]:checked + label{
 	text-overflow: ellipsis;
 	white-space: nowrap;
 	course:hand;
+}
+.readonly{
+	width: 232px;
+	height: 30px;
+	background: #bfbfb3;
+	position: absolute;
+	left: 143px;
+	top:0;
+	opacity: 0.3; 
+	filter:alpha(opacity=30);  
 }
